[gd_scene load_steps=17 format=3 uid="uid://c3rvm3rw6opg"]

[ext_resource type="Script" path="res://node_types/camera_shake.gd" id="1_lrklj"]
[ext_resource type="Script" path="res://scenes/main_gameplay/main_gameplay.gd" id="1_wt4mr"]
[ext_resource type="PackedScene" uid="uid://bmejrldvybsy8" path="res://objects/player/player.tscn" id="2_8jdjt"]
[ext_resource type="Resource" uid="uid://dbjpf7tcbt613" path="res://scenes/main_gameplay/stages/stage_1.tres" id="2_vspj8"]
[ext_resource type="Shader" path="res://materials/water_shader.gdshader" id="5_hiwcw"]
[ext_resource type="Script" path="res://ui/score.gd" id="6_sq3jg"]
[ext_resource type="PackedScene" uid="uid://cwcfvig1wond3" path="res://objects/summoning_circle/summoning_circle.tscn" id="7_6sfe8"]
[ext_resource type="Script" path="res://ui/hearts.gd" id="7_u0gx2"]
[ext_resource type="Script" path="res://scenes/main_gameplay/summon_meter.gd" id="8_2alke"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_fenso"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_vywn0"]
normal = Vector2(-1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_6mfka"]
normal = Vector2(0, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_4kntg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_thrq0"]
shader = ExtResource("5_hiwcw")
shader_parameter/R = Vector2(0.8, 0.6)
shader_parameter/scale = 0.5
shader_parameter/speed = 0.5
shader_parameter/moveSpeed = 0.15
shader_parameter/direction = Vector3(0.5, 1, 0)
shader_parameter/distortion = 0.5
shader_parameter/layers = 2.0
shader_parameter/shades = 3.0
shader_parameter/steps = 6
shader_parameter/tint = Vector3(0.459, 0.765, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_r0av5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kplpg"]
bg_color = Color(0.878822, 0.843573, 0.0310382, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="MainGameplay" type="Node2D"]
script = ExtResource("1_wt4mr")
stage = ExtResource("2_vspj8")

[node name="Walls" type="StaticBody2D" parent="." groups=["Wall"]]

[node name="LeftWall" type="CollisionShape2D" parent="Walls" groups=["Wall"]]
position = Vector2(0, 322)
shape = SubResource("WorldBoundaryShape2D_fenso")

[node name="RightWall" type="CollisionShape2D" parent="Walls" groups=["Wall"]]
position = Vector2(920, 322)
shape = SubResource("WorldBoundaryShape2D_vywn0")

[node name="TopWall" type="CollisionShape2D" parent="Walls" groups=["Wall"]]
position = Vector2(485, -2)
shape = SubResource("WorldBoundaryShape2D_6mfka")

[node name="BottomWall" type="CollisionShape2D" parent="Walls" groups=["Wall"]]
position = Vector2(486, 1080)
shape = SubResource("WorldBoundaryShape2D_4kntg")

[node name="Background" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_thrq0")
custom_minimum_size = Vector2(960, 720)
offset_right = 960.0
offset_bottom = 1112.0
texture = SubResource("CanvasTexture_r0av5")
flip_v = true

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="CameraShake" type="Node" parent="Camera2D"]
script = ExtResource("1_lrklj")

[node name="Player" parent="." instance=ExtResource("2_8jdjt")]
position = Vector2(485, 561)

[node name="PauseLayer" type="CanvasLayer" parent="Player"]
unique_name_in_owner = true
process_mode = 2
visible = false

[node name="PauseMenu" type="CenterContainer" parent="Player/PauseLayer"]
process_mode = 2
auto_translate_mode = 1
offset_left = 409.0
offset_top = 585.0
offset_right = 589.0
offset_bottom = 863.0

[node name="VBoxContainer" type="VBoxContainer" parent="Player/PauseLayer/PauseMenu"]
auto_translate_mode = 1
layout_mode = 2
theme_override_constants/separation = 80

[node name="Title" type="MarginContainer" parent="Player/PauseLayer/PauseMenu/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Player/PauseLayer/PauseMenu/VBoxContainer/Title"]
auto_translate_mode = 1
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "The Game"

[node name="MenuButtonContainer" type="VBoxContainer" parent="Player/PauseLayer/PauseMenu/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
theme_override_constants/separation = 10

[node name="CenterContainer" type="CenterContainer" parent="Player/PauseLayer/PauseMenu/VBoxContainer/MenuButtonContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="ResumeGameButton" type="Button" parent="Player/PauseLayer/PauseMenu/VBoxContainer/MenuButtonContainer/CenterContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
theme_type_variation = &"MainMenuButton"
text = "Resume Game"

[node name="CenterContainer2" type="CenterContainer" parent="Player/PauseLayer/PauseMenu/VBoxContainer/MenuButtonContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="HowToPlayButton" type="Button" parent="Player/PauseLayer/PauseMenu/VBoxContainer/MenuButtonContainer/CenterContainer2"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
theme_type_variation = &"MainMenuButton"
text = "How To Play"

[node name="CenterContainer3" type="CenterContainer" parent="Player/PauseLayer/PauseMenu/VBoxContainer/MenuButtonContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="OptionsButton" type="Button" parent="Player/PauseLayer/PauseMenu/VBoxContainer/MenuButtonContainer/CenterContainer3"]
auto_translate_mode = 1
layout_mode = 2
theme_type_variation = &"MainMenuButton"
text = "Options"

[node name="UI" type="Node2D" parent="."]

[node name="Score" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 750.0
offset_top = 1.0
offset_right = 908.0
offset_bottom = 32.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 48
text = "SCORE: 0"
horizontal_alignment = 2
script = ExtResource("6_sq3jg")

[node name="Hearts" type="Node2D" parent="UI"]
script = ExtResource("7_u0gx2")

[node name="SummonMeter" type="ProgressBar" parent="UI"]
offset_left = 797.0
offset_top = 37.0
offset_right = 906.0
offset_bottom = 57.0
theme_override_styles/fill = SubResource("StyleBoxFlat_kplpg")
value = 100.0
show_percentage = false
script = ExtResource("8_2alke")

[node name="SummoningCircle" parent="." instance=ExtResource("7_6sfe8")]
position = Vector2(1, -7)

[connection signal="player_died" from="Player" to="." method="_on_player_player_died"]
[connection signal="pressed" from="Player/PauseLayer/PauseMenu/VBoxContainer/MenuButtonContainer/CenterContainer/ResumeGameButton" to="." method="_on_resume_game_button_pressed"]
